# coffeebuddy

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  config_rpi.py  database.py  docker-compose.yml  pyproject.toml  requirements-facerecognition.txt  requirements-rc522.txt  requirements-rpi.txt  requirements.txt  setup.cfg  user.py
.github/workflows/: flake8.yml  lint.yml  test.yml  test_backends.yml  test_dockerdb.sh  test_dockerdb.yml
coffeebuddy/: __init__.py  attachments.py  camera.py  card.py  coffee.db  coffeemaker.py  events.py  face_encodings.pickle  facerecognition.py  facerecognition_threaded.py  illumination.py  model.py  pir.py  reminder.py  route_api.py  route_brew.py  route_chart.py  route_coffee.py  route_edituser.py  route_editvariant.py  route_login.py  route_oneswipe.py  route_pay.py  route_selectuser.py  route_tables.py  route_welcome.py  routes.py
coffeebuddy/extensions/: __init__.py  card.py  coffee_facts.yml  coffeemaker.py  display_on_off.py  events.py  help.py  illumination.py  illumination_neopixel.py  login.py  pir.py  prefilled.py  sayings.yml  webex.py
coffeebuddy/static/: 8xc_pro_1.0.xml  coffeebuddy.css  matrix-0.0.1.js  matrix.css
coffeebuddy/static/js/: autologout.js
coffeebuddy/templates/: brew.html  cardnotfound.html  coffee.html  edituser.html  editvariant.html  error.html  login.html  oneswipe.html  pay.html  selectuser.html  stats.html  tables.html  welcome.html
coffeebuddy/ui/: __init__.py
coffeebuddy/ui/admin/: __init__.py
coffeebuddy/ui/admin/templates/: login.html  tables.html
coffeebuddy/ui/api/: __init__.py
coffeebuddy/ui/base/: __init__.py
coffeebuddy/ui/base/templates/: error.html  selectuser.html  welcome.html
coffeebuddy/ui/coffee/: __init__.py
coffeebuddy/ui/coffee/templates/: brew.html  coffee.html  editcoffee.html  manage.html  oneswipe.html
coffeebuddy/ui/templates/: _base.html
coffeebuddy/ui/user/: __init__.py
coffeebuddy/ui/user/templates/: cardnotfound.html  edituser.html  pay.html  stats.html
coffeetag/: __init__.py  app.py  card.py  database.py  model.py  routes.py  user.py
coffeetag/static/: coffeetag.css  matrix-0.0.1.js
coffeetag/templates/: adduser.html  cardnotfound.html  coffee.html  edituser.html  stats.html  welcome.html
database/: Dockerfile  docker-compose.yml  entrypoint.sh  gen_certs.sh  pg_hba.conf  postgresql.conf  users.txt
doc/: HELP.md  facerecognition.md  postgresql.md  reverse-proxy-https.md
raspi/: autostart.sh  coffeebuddy.desktop
raspi/nginx/: docker-compose.yml
raspi/nginx/sites-enabled/: default
static/: coffeetag.css
templates/: coffee.html
test/: __init__.py  test_app.py  test_database.py  test_routes.py
tests/: __init__.py  conftest.py  test_database.py  test_routes.py  test_ui.py
