[project]
name = "coffeebuddy"
dynamic = ["version"]
description = "WebApp for Raspi to track your teams' coffee consumption digitally."
authors = [{ name = "Stefan Hackenberg", email = "mail@stefan-hackenberg.de" }]
dependencies = [
    "config>=0.5.1",
    "flask>=3.1.0",
    "sqlalchemy>=2.0.37",
    "flask-sqlalchemy>=3.1.1",
    "flask-socketio>=5.5.1",
    "flask-login>=0.6.3",
    "psycopg2-binary>=2.9.10",
    "webexteamssdk>=1.7",
    "apscheduler>=3.11.0",
    "holidays>=0.65",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "qrcode>=8.0",
]
requires-python = "<3.14,>=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
coffeemaker = [
    "jura-ble @ git+https://github.com/hackenbergstefan/jura_ble.git@v1.1.0",
]
rpi = ["mfrc522>=0.0.7", "pi-rc522>=2.3.0", "pigpio>=1.78", "spidev>=3.6"]
pcsc = ["pyscard>=2.2.1"]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.3.4",
    "ipython>=8.31.0",
    "djlint>=1.36.4",
    "selenium>=4.28.0",
]

[tool.setuptools]
packages = ["coffeebuddy"]

[tool.pdm]
distribution = false

[tool.ruff.lint]
select = ["E", "F", "I", "PLC", "PLE", "W"]

[tool.djlint]
profile = "django"
format_css = true
format_js = true
max_line_length = 120
preserve_blank_lines = true
